--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -3,6 +3,8 @@
     "lib": [
       "ESNext"
     ],
+    "jsxImportSource": "react",
+    "jsx": "react-jsx",
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "bundler",
