--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -25,6 +25,7 @@ COPY . .
 FROM base AS release
 COPY --from=install /temp/prod/node_modules node_modules
 COPY --from=prerelease /usr/src/app/src/ src/
+COPY --from=prerelease /usr/src/app/emails/ emails/
 COPY --from=prerelease /usr/src/app/package.json .
 
 # run the app
