install jose back

--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "@ydbjs/core": "^6.0.7",
     "@ydbjs/query": "^6.0.7",
     "hono": "^4.11.1",
+    "jose": "^6.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
